Demand Navigator/src/objects/Planning_Model__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_Cost__c</fullName>
        <label>Effort/Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period_New__c</fullName>
        <formula>MID(  Fiscal_Period__r.Name ,1,6) + &apos;-&apos; + MID(  Fiscal_Period__r.Name , 7,3)</formula>
        <label>Fiscal Period New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Year_Model__c</referenceTo>
        <relationshipName>Planning_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModelName__c</fullName>
        <label>ModelName</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Planning_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Measure</label>
        <referenceTo>Planning_Financial_Measure__c</referenceTo>
        <relationshipName>Planning_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipName>Planning_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <label>Record Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_offshore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Resource offshore</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_onsite__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Resource onsite</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Proration__c</fullName>
        <label>Revenue Proration</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>FCST Planning Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Comments__c</columns>
        <columns>NAME</columns>
        <columns>Planning_Version__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Planning_Measure__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Is_Editable_Test</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Planning_Measure__c</columns>
        <columns>Planning_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
            <value>006j000000HyHLVAA3</value>
        </filters>
        <label>Is Editable Test</label>
    </listViews>
    <listViews>
        <fullName>budget_verions</fullName>
        <columns>NAME</columns>
        <columns>Planning_Version__c</columns>
        <columns>Planning_Measure__c</columns>
        <columns>Amount__c</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Planning_Version__c</field>
            <operation>contains</operation>
            <value>Budget</value>
        </filters>
        <label>budget verions</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Planning Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Planning Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>